* Thu Oct 29 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Increase limit on the number of trapezoidally distributed load from
one per frame element to ten per frame element
- Fixed Frame3DD example files in the doc directory and renamed them to 
frame3dd-ex1.3dd and frame3dd-ex2.3dd

* Tue Oct 27 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022

- There appear to be conflicting definitions for the %TEMP% environment
variable in Windows.   The environment variable %TEMP% is defined differently
to an executable program than it is to a user.   To an executable program
%TEMP% is C:\WINDOWS\Temp and to a user %TEMP% is
%HOMEPATH%\Local Settings\Temp (at least in XP, it's something else in Vista).  
Until Microsoft resolves this discrepancy, the user-manual will recommend
setting the FRAME3DD_OUTDIR environment variable to a value referenced to
%HOMEPATH%, such as %HOMEPATH%\Desktop\Frame3DD\temp, rather than a value
referenced to %TEMP%, such as %TEMP%\frame3dd_temp
- The .ZIP installation now includes the directory Frame3DD\temp for the
reason described above.  
- If a user specifies a path for Output Data files, the file name is extracted
from the path to create the path for writing mesh and mode shape files.
For example, running
   frame3dd  examples/exB.3dd  examples/abc.out
would have resulted in an attempt to open /tmp/examples/abc-msh.001   In cases
in which the directory /tmp/examples/ does not exist, this would have resulted
in an error.   Now, running
   frame3dd  examples/exB.3dd  examples/abc.out
results in the successful opening of mesh and mode data files such as
/tmp/abc-msh.001 and /tmp/abc-m-01
- The (secret) -d "debug" flag is now operational.  It had been broken.
- In frame3dd_io.c change 
#ifdef WIN32   to    #if defined(WIN32) || defined(DJGPP)
- Change location of  frame3dd.3dd  from  "TEMP"  to  "FRAME3DD_OUTDIR"
- When run by clicking the frame3dd.exe (in Windows) the Command Prompt window
remains open until the user hits 'Enter'