@@ -994,8 +994,8 @@ The Output Data is formatted using floating point display, not scientific notati
 obtain the greatest number of significant digits in the output, use units of force
 and length such that the modulus of elasticity occupies three to five figures before
 the decimal point.  For example, if the frame to be analyzed is made of steel or
-aluminum, use units of (kips (1000 pounds) and inches), or (Newtons, millimeters,
-and tonne), or (MegaNewtons, meters, and kilotonnes).
+aluminum, use units of (kips (1000 pounds) and inches), or
+(Newtons, millimeters, and tonne), or (MegaNewtons, meters, and kilotonnes).
 </p>
 
 <p>
@@ -1473,24 +1473,30 @@ un-stressed stiffness matrix and the tangent stiffness matrix.
 Six types of static loads may be specified:
 </p>
 <ul>
-<li>Concentrated static force loads and concentrated static moments may be applied to joints.
+<li><b>Joint Loads</b><br>
+Concentrated static force loads and concentrated static moments may be applied to joints.
 These loads are specified as
 values of point forces and concentrated moments applied to joints
-in the directions of the structure's global coordinate system.  
-<li>Concentrated static force loads may be applied to frame elements between the joints.
-These loads are specified as 
-values of point forces applied to the frame element
-in the directions of the frame element's local coordinate system
-and the distance <i>x</i> from joint <i>J1</i> to the location of the load.   
-  </li>
-<li>Uniformly distributed static loads may be applied in the local element coordinate system over entire length of frame elements.
+in the directions of the structure's global <i>X-Y-Z</i> coordinate system.  
+</li>
+<li><b>Uniformly Distributed Loads</b><br>
+Uniformly distributed static loads may be applied in the local element coordinate system over the entire length of a frame element.
 Uniformly distributed loads are specified as
 values of the load per unit length applied to the frame element
 in the local <i>x</i> direction,
-the local <i>y</i> direction, and the local <i>z</i> direction.</li>
-<li>Trapezoidally distributed loads may be applied
+the local <i>y</i> direction, and the local <i>z</i> direction.
+</li>
+<li><b>Frame Element Point Loads</b><br>
+Concentrated static force loads may be applied to frame elements between the joints.
+Up to ten frame element point loads may be specified per frame element.  
+These loads are specified as values of point forces applied to the frame element
+in the directions of the frame element's local coordinate system
+at a distance <i>x</i> from joint <i>J1</i> of the frame element.  
+</li>
+<li><b>Trapezoidally Distributed Loads</b><br>
+Trapezoidally distributed loads may be applied
 over a partial span of frame elements.
-Up to ten trapezoidal loads may be applied to a single frame element.  
+Up to ten trapezoidal loads may be specified per frame element.  
 Trapezoidally distributed loads have components in the local <i>x</i> direction,
 the local <i>y</i> direction, and the local <i>z</i> direction.
 Trapezoidally distributed loads are specified by the distances along
@@ -1502,10 +1508,11 @@ The stopping location for a trapezoidal load must be greater than the
 starting value of the trapezoidal load and less
 than the length of the frame element.
 Fixed end forces computed from trapezoidal loads include the effects of
-shear deformation when shear deformation is utilized in the analysis.</li>
-<li>Thermal loads assume a linear temperature gradient through cross sections.
-Thermal loads are specified by values for the 
-coefficient of thermal expansion,
+shear deformation when shear deformation effects are incorporated.  
+</li>
+<li><b>Thermal Loads</b><br>
+Thermal loads assume a linear temperature gradient through cross sections.
+Thermal loads are specified by values for the coefficient of thermal expansion,
 the depth of the section in the local <i>y</i> direction, 
 the depth of the section in the local <i>z</i> direction, 
 and the temperature changes on
@@ -1513,16 +1520,20 @@ the <i>+y</i> surface,
 the <i>-y</i> surface, 
 the <i>+z</i> surface, and
 the <i>-z</i> surface. 
+Thermal loads are applied over the entire frame element.  
 </li>
-<li>Static joint displacements may be prescribed at fixed degrees of freedom only.
-Static joint displacements are specified in the structure's global coordinate system.  
+<li><b>Prescribed Displacements</b><br>
+Static joint displacements and rotations may be prescribed only at reaction degrees of freedom.
+Static joint displacements and rotations are specified in the structure's global <i>X-Y-Z</i> coordinate system.  
+</li>
 </ul>
 <p>
 Multiple static load cases are generated by specifying
 <a href="#Variables">the variable nL</a>
 in the
-<a href="#InputData">Input Data file</a>, and by specifying the six types of loads for each load case,
-as shown in <a href="../examples/exA.3dd">Frame3DD example A</a> and
+<a href="#InputData">Input Data file</a>,
+and by specifying the six types of loads for each load case, as shown in
+<a href="../examples/exA.3dd">Frame3DD example A</a> and
 <a href="../examples/exB.3dd">Frame3DD example B</a>.
 </p>
 
